# willitrain

./: .gitignore  LICENSE  README.md  forecast.py  post-merge.sh  pre-commit.sh  pyproject.toml  run_format.sh  run_format_check.sh  run_tests.sh  test_forecast.py
.circleci/: config.yml
darksky/: __init__.py  darksky.env.tpl  darksky.py  test_darksky.py
sms/: __init__.py  nexmo.env.tpl  sms.py  test_sms.py
