[tool.poetry]
name = "willitrain"
version = "0.1.0"
description = ""
authors = ["Khurshid Fayzullaev <khurshidfayzullaev@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23"
nexmo = "^2.4"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
pylint = "^2.4"
isort = "^4.3"
mypy = "^0.770"
pytest = "^5.3"
mock = "^4.0"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
